--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <div class="box">
-    <h1>Redirecting you to our workspace…</h1>
+    <h1>Redirecting you to a place where you can find out more about us!/h1>
     <p>Please wait</p>
     <div class="spinner"></div>
   </div>
