--- a/index.html
+++ b/index.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="UTF-8">
-  <title>Redirecting…</title>
-
-  <!-- Meta refresh fallback -->
-  <meta http-equiv="refresh" content="2; url=https://chatgpt.com">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Remove the Meta Refresh; it is often flagged as a 'sneaky redirect' -->
+  <title>Visit Our Partner Site | [Your Brand Name]</title>
 
   <style>
     body {
       margin: 0;
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #0f0f0f;
-      color: #eaeaea;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #fdfdfd;
+      color: #1a1a1a;
+      line-height: 1.6;
     }
-    .box {
+    .container {
       text-align: center;
+      max-width: 500px;
+      padding: 40px;
+      border: 1px solid #e1e1e1;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.05);
     }
-    .spinner {
-      margin: 20px auto 0;
-      width: 32px;
-      height: 32px;
-      border: 3px solid #444;
-      border-top: 3px solid #eaeaea;
-      border-radius: 50%;
-      animation: spin 0.8s linear infinite;
+    .button {
+      display: inline-block;
+      margin-top: 24px;
+      padding: 12px 24px;
+      background-color: #005ea5; /* Standard UK Government / Professional Blue */
+      color: white;
+      text-decoration: none;
+      border-radius: 3px;
+      font-weight: bold;
     }
-    @keyframes spin {
-      to { transform: rotate(360deg); }
+    .button:hover {
+      background-color: #003057;
+    }
+    .domain-text {
+      font-size: 0.9em;
+      color: #666;
+      margin-top: 15px;
     }
   </style>
-
-  <script>
-    setTimeout(() => {
-      window.location.href = "https://chatgpt.com";
-    }, 2000);
-  </script>
 </head>
 <body>
-  <div class="box">
-    <h1>Redirecting you to a place where you can find out more about us!/h1>
-    <p>Please wait</p>
-    <div class="spinner"></div>
+  <div class="container">
+    <h1>Learn more about us</h1>
+    <p>To find out more about our services and updates for 2026, please visit our official platform on ChatGPT.</p>
+    
+    <!-- Manual click is far safer than an automated script -->
+    <a href="https://chatgpt.com" class="button">Go to ChatGPT.com</a>
+
+    <p class="domain-text">You are leaving <strong>[YourDomain.com]</strong>. We use this platform to host our knowledge base.</p>
   </div>
 </body>
 </html>
