--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Remove the Meta Refresh; it is often flagged as a 'sneaky redirect' -->
   <title>Visit Our Partner Site | [Your Brand Name]</title>
 
   <style>
@@ -49,7 +48,7 @@
 <body>
   <div class="container">
     <h1>Learn more about us</h1>
-    <p>To find out more about our services and updates for 2026, please visit our official platform on ChatGPT.</p>
+    <p>Click down below!</p>
     
     <!-- Manual click is far safer than an automated script -->
     <a href="https://chatgpt.com" class="button">Go to ChatGPT.com</a>
