--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Manual click is far safer than an automated script -->
     <a href="https://chatgpt.com" class="button">Go to ChatGPT.com</a>
 
-    <p class="domain-text">You are leaving <strong>[YourDomain.com]</strong>. We use this platform to host our knowledge base.</p>
+    <p class="domain-text"></p>
   </div>
 </body>
 </html>
