--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visit Our Partner Site | [Your Brand Name]</title>
+  <title>Visit Our Site</title>
 
   <style>
     body {
