--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <p>Click down below!</p>
     
     <!-- Manual click is far safer than an automated script -->
-    <a href="https://chatgpt.com" class="button">Go to ChatGPT.com</a>
+    <a href="https://chatgpt.com" class="button"></a>
 
     <p class="domain-text"></p>
   </div>
