--- a/index.html
+++ b/index.html
@@ -1,59 +1,32 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Visit Our Site</title>
-
-  <style>
-    body {
-      margin: 0;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: #fdfdfd;
-      color: #1a1a1a;
-      line-height: 1.6;
-    }
-    .container {
-      text-align: center;
-      max-width: 500px;
-      padding: 40px;
-      border: 1px solid #e1e1e1;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-    }
-    .button {
-      display: inline-block;
-      margin-top: 24px;
-      padding: 12px 24px;
-      background-color: #005ea5; /* Standard UK Government / Professional Blue */
-      color: white;
-      text-decoration: none;
-      border-radius: 3px;
-      font-weight: bold;
-    }
-    .button:hover {
-      background-color: #003057;
-    }
-    .domain-text {
-      font-size: 0.9em;
-      color: #666;
-      margin-top: 15px;
-    }
-  </style>
+<title>Site</title>
 </head>
-<body>
-  <div class="container">
-    <h1>Learn more about us</h1>
-    <p>Click down below!</p>
-    
-    <!-- Manual click is far safer than an automated script -->
-    <a href="https://chatgpt.com" class="button"></a>
+<body bgcolor="#ffff00">
 
-    <p class="domain-text"></p>
-  </div>
+<center>
+    <font size="7" color="red" face="Comic Sans MS">
+        <b>!!! LEARN MORE ABOUT US !!!</b>
+    </font>
+
+    <br><br>
+
+    <font size="5" color="black">
+        u need to click the link to be redirected to our workspce...
+    </font>
+
+    <br><br>
+
+    <a href="tecknet-gg.github.io" style="font-size: 40px; background: blue; color: white; padding: 10px;">
+        CLICK HEERE
+    </a>
+
+    <p>redirecting now....</p>
+
+    <!-- lower quality images or icons usually go here -->
+    <marquee>Welcome to the workspace! Click the link above to enter!</marquee>
+</center>
+
 </body>
 </html>
