--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <br><br>
 
-    <a href="tecknet-gg.github.io" style="font-size: 40px; background: blue; color: white; padding: 10px;">
+    <a href="chatgpt.com" style="font-size: 40px; background: blue; color: white; padding: 10px;">
         CLICK HEERE
     </a>
 
