--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                     <font face="Comic Sans MS" size="6" color="#FF00FF">
                         <b>"I'll have my AI get back to you."</b>
                     </font><br>
-                    <font face="Arial" size="3">- Richard Fu, Chief Prompt Architect</font>
                 </center>
             </td>
         </tr>
@@ -86,7 +85,7 @@ The heat island effect will be solved by telling the sun to
     <table width="100%">
         <tr>
             <td><img src="https://media.giphy.com" width="50"></td>
-            <td><center><font size="2">PROUDLY HOSTED ON A COMPUTER RICHARD ISN'T CURRENTLY TOUCHING</font></center></td>
+            <td><center><font size="2">PROUDLY HOSTED ON A COMPUTER RICHARD ISN'T CURRENTLY USING FOR LABOUR</font></center></td>
             <td><img src="https://media.giphy.com" width="50"></td>
         </tr>
     </table>
