--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ The heat island effect will be solved by telling the sun to
     <table width="100%">
         <tr>
             <td><img src="https://media.giphy.com" width="50"></td>
-            <td><center><font size="2">PROUDLY HOSTED ON A COMPUTER RICHARD ISN'T CURRENTLY USING FOR LABOUR</font></center></td>
+            <td><center><font size="2">PROUDLY HOSTED ON A COMPUTER THAT ISN'T CURRENTLY BE USED FOR FREE LABOUR</font></center></td>
             <td><img src="https://media.giphy.com" width="50"></td>
         </tr>
     </table>
